k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler-deployment
  labels:
    app: crawler
spec:
  selector:
    matchLabels:
      app: crawler
      role: web
  template:
    metadata:
      labels:
        app: crawler
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/crawler
        imagePullPolicy: IfNotPresent
        name: crawler
        ports:
        - containerPort: 8000
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /var/tmp
          name: var-tmp
        - mountPath: /etc/ssl/k8s/proxy-cert
          name: proxy-cert
      volumes:
      - name: var-tmp
        emptyDir:
          medium: "Memory"
          sizeLimit: "128Mi"
      - name: proxy-cert
        secret:
          secretName: proxy-cert
