k8s/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler-deployment
  labels:
    app: crawler
spec:
  selector:
    matchLabels:
      app: crawler
      role: web
  template:
    metadata:
      labels:
        app: crawler
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/crawler
        imagePullPolicy: IfNotPresent
        name: crawler
        ports:
        - containerPort: 80
        volumeMounts:
        - name: proxy-cert
          mountPath: /etc/ssl/k8s/proxy-cert
      volumes:
      - name: proxy-cert
        secret:
          secretName: proxy-cert
  replicas: 3
