k8s/crawler-service.yml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
spec:
  selector:
    app: crawler
  ports:
    - protocol: TCP
      port: 80
